--- a/package.json
+++ b/package.json
@@ -3,15 +3,12 @@
   "devDependencies": {
     "browserify": "^10.2.4",
     "browserify-incremental": "^3.0.1",
-    "reactify": "^1.1.1",
-    "react": "^0.13.3"
+    "react": "^0.14.3",
+    "reactify": "^1.1.1"
   },
   "license": "UNLICENSED",
   "private": true,
   "engines": {
     "node": ">= 0.10"
-  },
-  "dependencies": {
-    "react-star-rating": "^1.4.2"
   }
 }
