--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-addons-css-transition-group": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-infinite-scroll": "^0.1.5",
+    "react-paginate-component": "0.0.3",
     "react-rater": "^0.1.0"
   }
 }
