--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^0.14.3",
     "react-infinite-scroll": "^0.1.5",
     "react-paginate-component": "0.0.3",
-    "react-rater": "^0.1.0"
+    "react-rater": "^0.1.0",
+    "underscore": "^1.8.3"
   }
 }
