--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node": ">= 0.10"
   },
   "dependencies": {
+    "pubsub-js": "^1.5.3",
     "react-addons-css-transition-group": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-infinite-scroll": "^0.1.5",
