--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "dealmn",
-  "devDependencies": {
-    "browserify": "^10.2.4",
-    "browserify-incremental": "^3.0.1",
-    "react": "^0.14.3",
-    "reactify": "^1.1.1"
-  },
   "license": "UNLICENSED",
   "private": true,
   "engines": {
     "node": ">= 0.10"
   },
   "dependencies": {
+    "browserify": "^10.2.4",
+    "browserify-incremental": "^3.0.1",
+    "react": "^0.14.3",
+    "reactify": "^1.1.1",
     "pubsub-js": "^1.5.3",
     "react-addons-css-transition-group": "^0.14.3",
     "react-dom": "^0.14.3",
