--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -25,8 +25,8 @@ production:
   adapter: postgresql
   encoding: unicode
   min_messages: warning
-  database: dealmn
+  database: dealmn_dev
   pool: 5
-  host: dealmn.cnztxs5sm2rg.us-west-2.rds.amazonaws.com
-  username: dealmn_ebt
-  password: dealmn_EBT
+  host: 127.0.0.1
+  username: leandata
+  password: leandata
