--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "node": ">= 0.10"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babelify": "^7.2.0",
     "browserify": "^10.2.4",
     "browserify-incremental": "^3.0.1",
-    "react": "^0.14.3",
-    "reactify": "^1.1.1",
     "pubsub-js": "^1.5.3",
+    "react": "^0.14.3",
     "react-addons-css-transition-group": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-infinite-scroll": "^0.1.5",
@@ -18,5 +20,16 @@
     "react-paginate-component": "0.0.3",
     "react-rater": "^0.1.0",
     "underscore": "^1.8.3"
+  },
+  "browserify": {
+    "extension": [
+      "jsx"
+    ],
+    "transform": [
+      [
+        "babelify",
+        {"presets": ["es2015", "react"]}
+      ]
+    ]
   }
 }
