--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-linkify": "^0.1.1",
     "react-paginate-component": "0.0.3",
     "react-rater": "^0.1.0",
+    "react-timer-mixin": "^0.13.3",
     "underscore": "^1.8.3"
   },
   "browserify": {
@@ -28,7 +29,12 @@
     "transform": [
       [
         "babelify",
-        {"presets": ["es2015", "react"]}
+        {
+          "presets": [
+            "es2015",
+            "react"
+          ]
+        }
       ]
     ]
   }
